--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -7,7 +7,7 @@ $c-green-up: #00473C;
 $c-green-default: #7A9A01;
 $c-green-font:#CBE19F;
 $c-black: #333333;
-$c-pink: #BE4598;
+$c-pink: #f91e1e;
 $c-grey: #BDBDBD;
 $c-grey-up: #F8F8F8;
 $c-grey-upper: #E6E6E6;
