--- a/scss/pages/_collection-detail.scss
+++ b/scss/pages/_collection-detail.scss
@@ -21,6 +21,8 @@
             }
         }
         .detail-content__left{
+            position: sticky;
+            top: 0;
             .content-slide__show{
                 position: relative;
                 .btn-full{
@@ -151,7 +153,7 @@
                                 border: none;
                                 padding-left: 0;
                                 padding-right: 0;
-                                flex: 1;
+                                flex: 2;
                                 &:after{
                                     margin-left: 10px;
                                     color: $c-blue-up;
@@ -312,25 +314,95 @@
             }
             .detail-color{
                 &__title{
-
+                    margin-bottom: 15px;
                 }
                 &__list{
                     ul{
                         display: flex;
                         padding: 0;
-                        li{
+                        li:not(:last-child){
+                            margin-right: 20px;
+                        }
+                        .active{
                             span{
                                 img{
+                                    border: 4px solid #fa6400;
+                                }
+                            }
+                        }
+                        li{
+                            &:hover{
+                                span{
+                                    img{
+                                        border: 4px solid #fa6400;
+                                    }
+                                }
+
+                            }
+                            span{
+                                display: inline-block;
+                                img{
+                                    transition: all 0.1s ease;
                                     min-width: 65px;
                                     height: 48px;
                                     object-fit: cover;
+                                    border: 1px solid $c-orange;
                                 }
                             }
                         }
                     }
                 }
             }
+            .detail-size{
+                &__title{
+                    margin-bottom: 10px;
+                    display: flex;
+                    justify-content: space-between;
+                    
+                }
+                &__list{
+                    ul{
+                        padding: 0;
+                        display: flex;
+                        margin: 0;
+                        li:not(:last-child){
+                            margin-right: 20px;
+                        }
+                        .active{
+                            span{
+                                background: $c-orange;
+                                color: #fff;
+                            }
+                        }
+                        li{
+                            cursor: pointer;
+                            &:hover{
+                                span{
+                                    background: $c-orange;
+                                    color: #fff;
+                                }
+                            }
+                            span{
+                                transition: all 0.3s ease;
+                                border: 1px solid $c-orange;
+                                text-transform: uppercase;
+                                display: inline-flex;
+                                height: 48px;
+                                width: 85px;
+                                justify-content: center;
+                                align-items: center;
+                                color: $c-orange;
+                            }
+                        }
+                    }
+                }
+            }
             .detail-amount{
+                margin-top: 25px;
+                label{
+                    display: block;
+                    margin-bottom: 10px;
+                }
                 input[type="number"] {
                     -webkit-appearance: textfield;
                     -moz-appearance: textfield;
@@ -343,8 +415,9 @@
                   }
                   
                   .number-input {
-                    border: 2px solid #ddd;
+                    border: 1px solid #ddd;
                     display: inline-flex;
+                    width: auto;
                   }
                   
                 .number-input,
@@ -371,7 +444,7 @@
                 display: inline-block;
                 position: absolute;
                 content: '';
-                width: 1rem;
+                width: .5rem;
                 height: 2px;
                 background-color: #212121;
                 transform: translate(-50%, -50%);
@@ -382,14 +455,259 @@
 
                 .number-input input[type=number] {
                 font-family: sans-serif;
-                max-width: 5rem;
+                max-width: 4rem;
                 padding: .5rem;
                 border: solid #ddd;
-                border-width: 0 2px;
-                font-size: 2rem;
+                border-width: 0 1px;
+                font-size: 16px;
                 height: 3rem;
                 font-weight: bold;
                 text-align: center;
+                }
+            }
+            .detail-add{
+                cursor: pointer;
+                font-weight: bold;
+                display: flex;
+                background: $c-orange;
+                color: #fff;
+                height: 48px;
+                justify-content: center;
+                align-items: center;
+                margin-top: 20px;
+                margin-bottom: 10px;
+                > div{
+                    margin-right: 10px;
+                    span{
+                        text-transform: none;
+                    }
+                }
+            }
+            .detail-support{
+                display: flex;
+                flex-wrap: wrap;
+                -webkit-box-pack: center;
+                justify-content: center;
+                &__item{
+                    position: relative;
+                    width: 33.3333%;
+                    display: flex;
+                    align-items: center;
+                    border: 1px solid #d8d8d8;
+                    cursor: pointer;
+                    padding: 5px ;
+                    .support-icon{
+                        max-width: 30px;
+                        height: 30px;
+                        margin-right: 5px;
+                        padding: 0 5px ;
+                        img{
+                            width: 100%;
+                            height: 100%;
+                           
+                        }
+                    }
+                    .support-content{
+                        span{
+                            font-weight: bold;
+                            color: $c-orange;
+                        }
+                        &:hover{
+                            p{
+                                color: $c-orange;
+                            }
+                        }
+                        p{
+                            margin: 0;
+                            font-size: 11px;
+                            a{
+                                font-weight: bold;
+                                text-decoration: none;
+                                color: $c-orange;
+                            }
+                        }
+                    }
+                }
+            }
+            .detail-descrep{
+                margin-top: 20px;
+                &__title{
+                    font-weight: bold;
+                    margin-bottom: 10px;
+                }
+                &__main{
+                    .descrep-item{
+                        display: flex;
+                        align-items: center;
+                        margin-bottom: 20px;
+                        &__icon{
+                            margin-right: 15px;
+                            img{
+                                width: 35px;
+                                height: 35px;
+                            }
+                        }
+                        &__content{
+                            a{
+                                text-decoration: none;
+                                color: $c-orange;
+                            }
+                            p{
+                                margin: 0;
+                                font-size: 13px;
+                            }
+
+                        
+                        }
+                    }
+                }
+            }
+        }
+        .detail-descreption{
+            &__title{
+                font-size: 24px;
+                font-weight: bold;
+                margin-bottom: 10px;
+            }
+            &__main{
+                padding-top: 20px;
+                padding-bottom: 20px;
+                font-size: 16px;
+                p{
+                    font-size: 16px;
+                }
+                .infor-box{
+                    margin: 15px 0;
+                    background-color: #fa64000d!important;
+                    border: 1px solid #fa640026!important;
+                    padding: 20px;
+                }
+                img{
+                    max-width: 1000px;
+                    margin: 0 auto;
+                    text-align: center;
+                    margin-bottom: 15px;
+                    margin-top: 15px;
+                }
+                
+                tbody{
+                    img{
+                        max-width: 100%;
+                    }
+                }
+                h4{
+                    margin-bottom: 15px;
+                    margin-top: 15px;
+                }
+            }
+        }
+        .collection-detail__review{
+            &-title{
+                margin-bottom: 10px;
+                font-weight: bold;
+            }
+            &-total{
+                display: flex;
+                align-items: center;
+                > div{
+                    span{
+                        font-weight: bold;
+                    }
+                }
+
+            }
+            .rating-start{
+                margin-left: 10px;
+                span{
+                    img{
+                        height: 16px;
+                        width: 15px;
+                    }
+                }
+            }
+            &-main{
+                margin-top: 25px;
+                .review-item{
+                    border-radius: 10px;
+                        padding: 20px 30px;
+                        margin-bottom: 20px;
+                        background: #f9f9f9;
+                    &__infor{
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        
+                        &-main{
+                            display: flex;
+                            align-items: center;
+                            .item-icon{
+                                margin-right: 15px;
+                                img{
+                                    width: 32px;
+                                    height: 32px;
+                                }
+                            }
+                            .item-infor{
+                                margin-bottom: 8px;
+                                &__status{
+                                    display: flex;
+                                    align-items: flex-end;
+                                    font-size: 12px;
+                                    color: #A1A2A2;
+                                    margin-bottom: 8px;
+                                    img{
+                                        margin-right: 10px;
+                                        height: 30px;
+                                    }
+                                }
+                                .rating-start{
+                                    margin: 0;
+                                }
+
+                            }
+                        }
+                    }
+                    &__product{
+                        &-detail{
+                            p{  
+                                margin: 0;
+                                color: #A1A2A2;
+                                font-size: 16px;
+                            }
+                        }
+                        &-customer{
+                            p{
+                                margin: 0;
+                            }
+                        }
+                    }
+                }
+                .btn-more{
+                    margin-bottom: 30px;
+                    font-weight: 400;
+                    border-color: #fa6400;
+                    border: 1px solid;
+                    color: #fa6400;
+                    display: inline-flex;
+                    -webkit-box-align: center;
+                    -ms-flex-align: center;
+                    align-items: center;
+                    padding: 0 15px;
+                    height: 45px;
+                    -webkit-transition: all .2s;
+                    transition: all .2s;
+                    white-space: nowrap;
+                    outline: none;
+                    cursor: pointer;
+                    -webkit-box-pack: center;
+                    -ms-flex-pack: center;
+                    justify-content: center;
+                    font-size: 14px;
+                    &:hover{
+                        background: $c-orange;
+                        color: #fff;
+                    }
+
                 }
             }
         }
