--- a/scss/pages/_collection-detail.scss
+++ b/scss/pages/_collection-detail.scss
@@ -1,3 +1,23 @@
+.my-gallery {
+    width: 100%;
+    float: left;
+  }
+  .my-gallery img {
+    width: 100%;
+    height: auto;
+  }
+  .my-gallery figure {
+    display: block;
+    float: left;
+    margin: 0 5px 5px 0;
+    width: 150px;
+  }
+  .my-gallery figcaption {
+    display: none;
+  }
+  
+
+
 .collection-detail{
     &__wrapper{
         .breadcrumb{
@@ -392,6 +412,7 @@
                                 justify-content: center;
                                 align-items: center;
                                 color: $c-orange;
+                                font-weight: bold;
                             }
                         }
                     }
@@ -584,10 +605,14 @@
                 }
                 img{
                     max-width: 1000px;
-                    margin: 0 auto;
+                   
                     text-align: center;
                     margin-bottom: 15px;
                     margin-top: 15px;
+                }
+                a{
+                    display: flex;
+                    justify-content: center;
                 }
                 
                 tbody{
